<resources>
    <string name="app_name">Tiendas</string>
    <string name="login">Login</string>
    <string name="helperRequire">Requerido</string>
    <string name="login_til_password">Password</string>
    <string name="login_til_email">E-mail</string>
    <string name="dialog_title">Se deben llenar los campos</string>
    <string name="dialog_confirm">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="signin">Signin</string>
    <string name="login_til_name">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>