<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/login_til_email"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/counter_max_mail"
        app:endIconMode="clear_text"
        app:helperText="@string/helperRequire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/counter_max_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_til_password"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/counter_max_password"
        app:endIconMode="password_toggle"
        app:helperText="@string/helperRequire"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/counter_max_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:text=".¿Olvidaste tu cantraseña?Haz clic "
        />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:text=".aqui"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:layout_marginTop="32dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text=".No tienes cuenta, crea una aqui"
        />

</androidx.constraintlayout.widget.ConstraintLayout>